[gd_scene load_steps=10 format=3 uid="uid://b1do6gcy6peum"]

[ext_resource type="Script" uid="uid://hgn4pm0uqt3l" path="res://Scripts/planner_canvas.gd" id="1_jhfc7"]
[ext_resource type="Script" uid="uid://c5qfp4llclgt" path="res://Scripts/background.gd" id="2_5b2e5"]
[ext_resource type="Texture2D" uid="uid://cjir350kly5j8" path="res://Icons/connection_indicator.svg" id="2_jhfc7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jhfc7"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_5b2e5"]
Panel/styles/panel = SubResource("StyleBoxFlat_jhfc7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6ack"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 0.498039)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
anti_aliasing = false

[sub_resource type="Theme" id="Theme_iacmt"]
Panel/styles/panel = SubResource("StyleBoxFlat_x6ack")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ebs2"]
texture = ExtResource("2_jhfc7")

[sub_resource type="Theme" id="Theme_oyb3p"]
Panel/styles/panel = SubResource("StyleBoxTexture_2ebs2")

[node name="Canvas" type="Control"]
light_mask = 8
visibility_layer = 8
layout_mode = 3
anchors_preset = 0
offset_right = 20000.0
offset_bottom = 10000.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_jhfc7")

[node name="Background" type="Panel" parent="."]
light_mask = 8
visibility_layer = 8
z_index = -5
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_5b2e5")
script = ExtResource("2_5b2e5")
drawing_regions = true
line_color = Color(0.169583, 0.190176, 0.210148, 1)
background_color = Color(0, 0, 0, 1)

[node name="ConnectionContainer" type="Control" parent="."]
light_mask = 8
visibility_layer = 8
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SelectionViewer" type="Panel" parent="."]
visible = false
light_mask = 8
visibility_layer = 8
z_index = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
theme = SubResource("Theme_iacmt")

[node name="ConnectionIndicator" type="Panel" parent="."]
visible = false
light_mask = 8
visibility_layer = 8
z_index = 3
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
theme = SubResource("Theme_oyb3p")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
